--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/express": "^2.3.0",
     "@types/morgan": "^1.9.5",
     "colorette": "^2.0.20",
     "fastify": "^4.22.2",
